commit class, student, teacher built

--- a/Web.config
+++ b/Web.config
@@ -11,8 +11,9 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-jw537414_MIS_plswrk-20190919055557.mdf;Initial Catalog=aspnet-jw537414_MIS_plswrk-20190919055557;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=cob.ohio.edu; Initial
+Catalog=Portfolio-jw537414-MIS4200;Integrated Security=True"
+providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
