--- a/bin/jw537414_MIS_plswrk.dll.config
+++ b/bin/jw537414_MIS_plswrk.dll.config
@@ -11,8 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=cob.ohio.edu; Initial
-Catalog=Portfolio-jw537414-MIS4200;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=cob.ohio.edu; Initial Catalog=Portfolio-jw537414-MIS4200;Integrated Security=True"
 providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
